CMAKE_MINIMUM_REQUIRED(VERSION 3.23)
PROJECT(cpproxy_tests)
SET(CMAKE_CXX_STANDARD 23)
SET(CXX_STANDARD_REQUIRED YES)
FILE(GLOB SOURCE "*.hpp" "*.cpp")
INCLUDE_DIRECTORIES("..\\include")

IF(MSVC)
	ADD_COMPILE_OPTIONS("/Zc:__cplusplus")
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE})

IF(MSVC)
	ADD_DEFINITIONS(/MP)
ENDIF()

SET_PROPERTY(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
